main and footer nav spacing fixes on smaller devices

--- a/css/queries.css
+++ b/css/queries.css
@@ -49,7 +49,8 @@
 
     .main-nav {
         padding-right: 8px;
-        justify-content: space-around;
+        justify-content: space-between;
+        width: 60%;
     }
 
     .section-history img {
@@ -226,9 +227,15 @@
 
     .footer-nav {
         width: 100%;
-        justify-content: space-evenly;
+        justify-content: space-between;
     }
 
     .footer-nav li { font-size: 115%; }
     .last-address-line { padding-bottom: 10px; }
+}
+
+@media only screen and (max-width: 320px) {
+    .footer-nav {
+        font-size: 70%;
+    }
 }
